<?xml version="1.0"?>
<package format="3">
  <name>robotics_trial</name>
  <version>0.0.1</version>
  <description>ROS2 package for object detection and perception</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>TODO: License</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
